--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["./index.ts"],
   "compilerOptions": {
     "lib": [
       "es6",
@@ -9,9 +10,11 @@
     "target": "es5",
     "strict": true,
     "module": "es6",
+    "isolatedModules": true,
     "moduleResolution": "node",
     "sourceMap": false,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
   }
 }
