--- a/tracker-config.json
+++ b/tracker-config.json
@@ -1,4 +1,5 @@
 {
+  "DEBUG": false,
   "FRONT_PORT": 3000,
   "API_PORT": 3002,
   "SAVES_URL": "/Users/kizu/Library/Application Support/Finji/Overland/gameSaves",
