--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,7 @@
     "module": "commonjs",
     "isolatedModules": true,
     "moduleResolution": "node",
-    "sourceMap": false,
+    "sourceMap": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
