--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@types/express": "^4.17.11",
     "@types/jspath": "^0.4.0",
     "@types/node": "^14.14.27",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "@vitejs/plugin-react-refresh": "^1.1.0",
     "chokidar": "^3.5.1",
     "cors": "^2.8.5",
     "electron": "^11.3.0",
@@ -36,11 +39,8 @@
     "react-dom": "^17.0.0",
     "react-hooks-sse": "^2.0.0",
     "ticks-to-date": "^1.0.3",
-    "xml2js": "^0.4.23",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.1.0",
     "typescript": "^4.1.5",
-    "vite": "^2.0.0-beta.65"
+    "vite": "^2.0.0-beta.65",
+    "xml2js": "^0.4.23"
   }
 }
