--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "overland-tracker-ui",
+  "productName": "Overland Tracker",
   "main": "dist/src/main.js",
   "version": "0.0.0",
   "license": "MIT",
@@ -11,6 +12,7 @@
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "yarn build && electron .",
+    "dev": "yarn build && electron . --debug",
     "package": "yarn package:mac && yarn package:win && package:linux",
     "package:mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --out=out --icon=assets/app-icon/mac/app.icns --osx-sign.identity='Developer ID Application: GitHub' --extend-info=assets/mac/info.plist",
     "package:win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out --icon=assets/app-icon/win/app.ico",
@@ -32,6 +34,7 @@
     "cors": "^2.8.5",
     "electron": "^11.3.0",
     "electron-packager": "^15.2.0",
+    "electron-settings": "^4.0.2",
     "eslint": "^7.20.0",
     "express": "^4.17.1",
     "jspath": "^0.4.0",
