--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "private": true,
   "name": "overland-tracker-ui",
   "productName": "Overland Tracker",
   "main": "dist/src/main.js",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "build:app:vite": "cd app && tsc && vite build",
@@ -20,6 +21,20 @@
   },
   "dependencies": {
     "@reshadow/react": "^0.0.1-issue-119.0",
+    "chokidar": "^3.5.1",
+    "electron-settings": "^4.0.2",
+    "jspath": "^0.4.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-hooks-sse": "^2.0.0",
+    "ticks-to-date": "^1.0.3",
+    "vite": "^2.0.4",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "eslint": "^7.20.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jspath": "^0.4.0",
@@ -29,21 +44,9 @@
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "@vitejs/plugin-react-refresh": "^1.1.0",
-    "chokidar": "^3.5.1",
-    "cors": "^2.8.5",
     "electron": "^11.3.0",
     "electron-packager": "^15.2.0",
-    "electron-settings": "^4.0.2",
-    "eslint": "^7.20.0",
     "express": "^4.17.1",
-    "jspath": "^0.4.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-hooks-sse": "^2.0.0",
-    "ticks-to-date": "^1.0.3",
-    "typescript": "^4.1.5",
-    "vite": "^2.0.0-beta.65",
-    "xml2js": "^0.4.23"
+    "typescript": "^4.1.5"
   }
 }
