--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@reshadow/react": "^0.0.1-issue-119.0",
     "chokidar": "^3.5.1",
-    "electron-settings": "^4.0.2",
+    "electron-store": "^7.0.2",
+    "electron-window-state": "^5.0.3",
     "jspath": "^0.4.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -32,9 +33,6 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "eslint": "^7.20.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jspath": "^0.4.0",
@@ -44,8 +42,11 @@
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "cors": "^2.8.5",
     "electron": "^11.3.0",
     "electron-packager": "^15.2.0",
+    "eslint": "^7.20.0",
     "express": "^4.17.1",
     "typescript": "^4.1.5"
   }
