--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "dev": "yarn build && electron . --debug",
     "package": "yarn package:mac && yarn package:win && package:linux",
     "package:mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --out=out --icon=assets/app-icon/mac/app.icns --osx-sign.identity='Developer ID Application: GitHub' --extend-info=assets/mac/info.plist",
+    "package:m1": "electron-packager . --overwrite --platform=darwin --arch=arm64 --out=out --icon=assets/app-icon/mac/app.icns --osx-sign.identity='Developer ID Application: GitHub' --extend-info=assets/mac/info.plist",
     "package:win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out --icon=assets/app-icon/win/app.ico",
     "package:linux": "electron-packager . --overwrite --platform=linux --arch=x64 --out=out"
   },
   "dependencies": {
     "@reshadow/react": "^0.0.1-issue-119.0",
     "chokidar": "^3.5.1",
-    "electron-store": "^7.0.2",
+    "electron-store": "^8.0.0",
     "electron-window-state": "^5.0.3",
     "jspath": "^0.4.0",
     "react": "^17.0.0",
@@ -44,8 +45,8 @@
     "@typescript-eslint/parser": "^4.15.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "cors": "^2.8.5",
-    "electron": "^11.3.0",
-    "electron-packager": "^15.2.0",
+    "electron": "^14.0.0",
+    "electron-packager": "^15.4.0",
     "eslint": "^7.20.0",
     "express": "^4.17.1",
     "typescript": "^4.1.5"
